--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openapi-validator": "^5.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
     "nodemon": "^3.0.1",
