chore: :rocket: Add DB_URI in .env for connection in Railway
Testing first

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PORT = 3000
 
 # JWT Sign
 JWT_SIGN = "Week10-Projects"
+
+# Connection for Railway
+DB_URI = mongodb://mongo:ca4Kdg7CTuCtMz0ERGNm@containers-us-west-85.railway.app:6938
