--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ PORT = 3000
 
 # JWT Sign
 JWT_SIGN = "Week10-Projects"
+
+# Connection for MongoDB
+# default local: mongodb://127.0.0.1:27017
+# Atlas MongoDB: mongodb+srv://sanhendrindwip:MzDgt5ZYeL9MvvTv@cluster0.elyckcb.mongodb.net/?retryWrites=true&w=majority
+# Railway: mongodb://mongo:ca4Kdg7CTuCtMz0ERGNm@containers-us-west-85.railway.app:6938 
+
+MONGO_URI = "mongodb://127.0.0.1:27017"
+MONGO_DB = "revou-week-10"
