--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ JWT_SIGN = "Week10-Projects"
 # Atlas MongoDB: mongodb+srv://sanhendrindwip:MzDgt5ZYeL9MvvTv@cluster0.elyckcb.mongodb.net/?retryWrites=true&w=majority
 # Railway: mongodb://mongo:ca4Kdg7CTuCtMz0ERGNm@containers-us-west-85.railway.app:6938 
 
-MONGO_URI = "mongodb://127.0.0.1:27017"
+MONGO_URI = "mongodb://mongo:ca4Kdg7CTuCtMz0ERGNm@containers-us-west-85.railway.app:6938"
 MONGO_DB = "revou-week-10"
